--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<title>TFM</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="main.css">
+
+	<script>
+<!--Google analytics -->
+	</script>
+
+</head>
+
+<body>
+
+	<div class="container-fluid">
+
+		<div class="intro text-center">
+
+			<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="container-fluid">
+				<ul class="nav">
+					<div>
+						<li class="col-md-4 col-sm-4 text-left hidden-xs"><a href="http://www.turkishformystery.com">Home</a></li>
+						<li class="col-md-4 col-sm-4">Project</li>
+						<li class="col-md-4 col-sm-4 text-right hidden-xs"><a href="about.html">About</a></li>
+						</div>
+					</ul>
+			</div>
+			</nav>
+
+		</div>
+	</div>	
+	<div class="container-fluid">
+		<div id="entry"> 
+			<div class="content text-center">
+			<h1>Hello World</h1>
+			<h2>
+				<span class="filler" id="hosted">I'm hosted with GitHub Pages.</span></h2>
+			</div>
+		</div>	
+	</div>
+
+    <link rel="stylesheet" href="main.css">	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script>
+	$(document)
+	</script>
+	<script async="" src="//www.google-analytics.com/analytics.js"></script>	
+	<!--Insert google analtyics code here-->
+
+	</body>
+</html>
