--- a/apps/tictactoe/index.html
+++ b/apps/tictactoe/index.html
@@ -25,6 +25,6 @@
         <div id="announce-winner"></div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
-        <script type="text/javascript" src="./TicTacToe.js"></script>        
+        <script type="text/javascript" src="./tictactoe.js"></script>        
     </body>
 </html>
