--- a/apps/towersofhanoi/index.html
+++ b/apps/towersofhanoi/index.html
@@ -20,6 +20,6 @@
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
-  <script type="text/javascript" src="./TowersOfHanoi.js"></script>
+  <script type="text/javascript" src="./towersofhanoi.js"></script>
 </body>
 </html>
