adding new site design and apps

--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
 				<ul class="nav">
 					<div>
 						<li class="col-md-4 col-sm-4 text-left hidden-xs"><a href="#">Subscribe</a></li>
-						<li class="col-md-4 col-sm-4 tfm"> <a href="/"><i class="fa fa-moon-o"></i>Turkish for mystery<i class="fa fa-star-o"></i></a></li>
+						<li class="col-md-4 col-sm-4 tfm"> <a href="/index.html"><i class="fa fa-moon-o"></i>Turkish for mystery<i class="fa fa-star-o"></i></a></li>
 						<li class="col-md-4 col-sm-4 text-right hidden-xs">
-						<a href="#">About</a>
+						<a href="#">Link</a>
 						</li>
 						</div>
 					</ul>
@@ -55,7 +55,7 @@
 					<div class="text-left">
 						<div class="items">
 							<h2 class="text-right">
-								<span class="filler" id="design"><a href="#">design</a></span>
+								<span class="filler" id="design"><a href="#"> design</a></span>
 							</h2>
 							<h2>
 								<span class="filler" id="apps"><a href="#">apps</a> </span> 
@@ -72,7 +72,7 @@
 			</div>
 			<div class="col-sm-6 col-md-6">
 				<div class="copy">
-					<p>I am a lifelong learner, passionate about the interwebs. Currently working as a web designer in Austin for the most discerning name in travel. Previously, a graphic designer in New York for the most trusted name in trend. <!-- <a href="/about">Learn more <span class="pt20"><i class="fa fa-caret-right"></i></span></a> --></p>
+					<p>I am a lifelong learner, passionate about the interwebs. Currently working as a web designer in Austin for the most discerning name in travel. Previously in New York as a graphic designer for the most trusted name in trend.</p>
 				</div>
 			</div>
 		</div>
