forgot the html and styles duh

--- a/apps/towersofhanoi/index.html
+++ b/apps/towersofhanoi/index.html
@@ -18,6 +18,7 @@
   <div data-stack="3">
   </div>
   <div id="announce-game-won"></div>
+  <div id="not-allowed"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script type="text/javascript" src="./towersofhanoi.js"></script>
